Remove redis dependency, update readme

--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -62,8 +62,8 @@
 - include: "{{ role_path }}/tasks/composer.yaml" 
   tags: [composer, composer-install, common]
 
-- include: "{{ role_path }}/tasks/redis.yaml" 
-  tags: [redis, redis-install, common]
+# - include: "{{ role_path }}/tasks/redis.yaml" 
+#   tags: [redis, redis-install, common]
   
 - include: "{{ role_path }}/tasks/iptables.yaml" 
   tags: [iptables, common]
